--- a/src/SASS/main.scss
+++ b/src/SASS/main.scss
@@ -1,6 +1,12 @@
 @import 'abstract/colors';
 @import 'abstract/typography';
+@import 'abstract/animations';
 
 @import 'components/butons';
 
 @import 'base/base';
+
+@import 'layout/header';
+@import 'layout/navbar';
+
+@import 'pages/home';
